Clean up and prettify #357. - Reformat Code - Remove public modifiers (no longer needed in JUnit 5) - Fix code smells - Replace Java 8 incompatible uses of `List.of()` with `Arrays.asList()`